# Vision-based-drive-assisted

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: frame_data.h  geometry.h  hud_renderer.h  objloader.h  parse_json.h  projection.h  shader_loader.h  tcp_client.h  tcp_thread.h
perception/TCP/: tcp_sender.py  tcp_server.py
perception/object_detection/cars_detection/: __init__.py  detect_car.py  detector.py  drawing.py
perception/object_detection/ensemble/: calib.json  depth_worker.py  ensemble.py  hud.py  ipm.py  yolo_worker.py
perception/object_detection/lane_detection/: __init__.py  collector.py  drawing.py  hybridnets_worker.py
perception/object_detection/lights_detection/train/: test.py  train_lights.py
perception/object_detection/lights_detection/train/config/: data.yaml
perception/object_detection/sign_detection/: __init__.py  detect.py  detector.py  drawing.py
perception/object_detection/sign_detection/train/: export.py  train.py  val.py
perception/object_detection/sign_detection/train/config/: data.yaml
shaders/: building.frag  building.vert  hud.frag  hud.vert  lane.frag  model.frag  model.vert  rain.frag  rain.vert  road.frag  road_nm.frag  sky.frag  sky.vert  star.frag  star.vert  world.vert
src/: building_renderer.cpp  car_renderer.cpp  hud_renderer.cpp  lane_renderer.cpp  main.cpp  objloader.cpp  person_renderer.cpp  rain_renderer.cpp  road_renderer.cpp  sign_renderer.cpp  sky_renderer.cpp  star_renderer.cpp  street_light_renderer.cpp  tcp_client.cpp  tcp_thread.cpp
(+6 files in other folders)
